syntax = "proto3";
package voting;
//need to specify the package to generate
//format is "path;name"
option go_package = "./;voting";
import "google/protobuf/timestamp.proto";

//Part. A
message Voter {
	string name = 1;
	string group = 2;
	bytes public_key = 3;
}

message VoterName {
	string name = 1;
}

message Status {
	int32 code = 1;
}


// Part. B
service eVoting {
    rpc PreAuth (VoterName) returns (Challenge);
    rpc Auth (AuthRequest) returns (AuthToken);
    rpc CreateElection (Election) returns (Status);
    rpc CastVote (Vote) returns (Status);
    rpc GetResult (ElectionName) returns (ElectionResult);
}

// the value stand for the sequence number of this variable not the real value

message Challenge {
	bytes value = 1;
}

message Response {
	bytes value = 1;
}

message AuthRequest {
	VoterName name = 1;
	Response response = 2;
}

message AuthToken {
	bytes value = 1;
}
// Repeated means this field can repeated any number of times including 0
message Election {
	string name = 1;
	repeated string groups = 2;
	repeated string choices = 3;
	google.protobuf.Timestamp end_date = 4;
	AuthToken token = 5;
}

message Vote {
	string election_name = 1;
	string choice_name = 2;
	AuthToken token = 3;
}

message ElectionName {
	string name = 1;
}

message VoteCount {
	string choice_name = 1;
	int32 count = 2;
}
message ElectionResult {
	int32 status = 1;
	repeated VoteCount counts = 2;
}
